--- a/q/275970.html
+++ b/q/275970.html
@@ -26,23 +26,33 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>024</td><td>JavaScript ES6</td><td>241008T224008Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/shortest-realisation-of-ncn/275981#275981">Arnauld</a></td></tr>
-<tr d-ix="1"><td>028</td><td>Python 3</td><td>241008T204519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/shortest-realisation-of-ncn/275975#275975">jdt</a></td></tr>
-<tr d-ix="2"><td>005</td><td>Uiua</td><td>241008T195211Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/shortest-realisation-of-ncn/275972#275972">nyxbird</a></td></tr>
+<tr d-ix="0"><td>003</td><td>Vyxal</td><td>241008T230652Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/shortest-realisation-of-ncn/275982#275982">emanresu</a></td></tr>
+<tr d-ix="1"><td>024</td><td>JavaScript ES6</td><td>241008T224008Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/shortest-realisation-of-ncn/275981#275981">Arnauld</a></td></tr>
+<tr d-ix="2"><td>028</td><td>Python 3</td><td>241008T204519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/shortest-realisation-of-ncn/275975#275975">jdt</a></td></tr>
+<tr d-ix="3"><td>005</td><td>Uiua</td><td>241008T195211Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/shortest-realisation-of-ncn/275972#275972">nyxbird</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 24 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 3 bytes</h1>
+<pre><code>b∑+
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJi4oiRKyIsIiIsIjUiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
+<pre><code>  + # Add
+ ∑  # Sum
+b   # Of bits
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 24 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>f=n=&gt;n&amp;&amp;(n&amp;-n)-~f(n&amp;n-1)
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/zTbP1i5PTU0jT003T1O3Lg3IyNM11PyfnJ9XnJ@TqpeTn66RpmGkqcmFKmKOIWJobAwU/A8A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 28 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 28 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>lambda n:bin(n).count('1')+n
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM/6fZhvzPycxNyklUSHPKikzTyNPUy85vzSvREPdUF1TO@9/QVEmkJOmYaapaf0fAA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 5 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 5 bytes</h1>
 <pre><code>+/+⊸⋯
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_13_0-dev_3__ZiDihpAgKy8r4oq44ouvCuKJoSjiip_in5xmKeKHoTEyOAo=" rel="nofollow noreferrer">Try it!</a></p>
