--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20241009T021349Z
+"   /golfscore                                      20241009T051943Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
 <a href="q/275973.html">Decide symmetry of fractions                    : 0275973</a>
+<a href="q/47870.html">Count the number of ones in an unsigned 16-bit i: 0047870</a>
 <a href="q/275970.html">Shortest realisation of n+C(n)                  : 0275970</a>
 <a href="q/44333.html">Are these dice nontransitive?                   : 0044333</a>
 <a href="q/958.html">Random dice tipping                             : 0000958</a>
