--- a/q/275973.html
+++ b/q/275973.html
@@ -38,6 +38,7 @@
 <pre class="lang-none prettyprint-override"><code>p=&gt;g=(q,r=q)=&gt;r&amp;&amp;g(q+q,r/=2)|(p&amp;q+r)%3
 </code></pre>
 <p><a href="https://tio.run/##bc67CsIwGIbh3csIGP6fekpqB4d09ArcqkOobVRCjlUQvPcouqjN@D3L917kTcY2nN0wN/bYpV4kJ2olwM@C8CjqQKkCX7zmUnB8gKO@CDgtU2tNtLpbaKuANLtwHU73A8HJt/ewQmD4jyUCH@EGYT1CVn30h8neNFupY@aO5e54DlmuocoheyekJw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Be noticed that this function works since numbers in JS are double instead of int. So <code>r</code> may be <code>0.5</code> during execution. Be careful about this behavior when porting it into other languages.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 7 bytes</h1>
 <pre><code>Ƃ;↔=#Ë=
