--- a/q/275970.html
+++ b/q/275970.html
@@ -26,12 +26,36 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>003</td><td>Vyxal</td><td>241008T230652Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/shortest-realisation-of-ncn/275982#275982">emanresu</a></td></tr>
-<tr d-ix="1"><td>024</td><td>JavaScript ES6</td><td>241008T224008Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/shortest-realisation-of-ncn/275981#275981">Arnauld</a></td></tr>
+<tr d-ix="0"><td>024</td><td>JavaScript ES6</td><td>241008T224008Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/shortest-realisation-of-ncn/275981#275981">Arnauld</a></td></tr>
+<tr d-ix="1"><td>003</td><td>Vyxal</td><td>241008T230652Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/shortest-realisation-of-ncn/275982#275982">emanresu</a></td></tr>
 <tr d-ix="2"><td>028</td><td>Python 3</td><td>241008T204519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/shortest-realisation-of-ncn/275975#275975">jdt</a></td></tr>
 <tr d-ix="3"><td>005</td><td>Uiua</td><td>241008T195211Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/shortest-realisation-of-ncn/275972#275972">nyxbird</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 3 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 24 bytes</h1>
+
+<pre class="lang-none prettyprint-override"><code>f=n=&gt;n&amp;&amp;(n&amp;-n)-~f(n&amp;n-1)
+</code></pre>
+<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/zTbP1i5PTU0jT003T1O3Lg3IyNM11PyfnJ9XnJ@TqpeTn66RpmGkqcmFKmKOIWJobAwU/A8A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<h3>Explanation</h3>
+<p>Recursion seems like the most code-golf-friendly way of doing this in JS. However, counting the set bits and adding <code>n</code> to the total is <em>not</em> the shortest method because we need to either use <code>n</code> before the recursion starts or remember its original value for the final step.</p>
+<p>For example:</p>
+<pre class="lang-none prettyprint-override"><code>n=&gt;n+(g=k=&gt;k&amp;&amp;-~g(k&amp;k-1))(n) // 28 bytes
+f=(n,k=n)=&gt;n?-~f(n&amp;n-1,k):k  // 27 bytes
+</code></pre>
+<p>Hence the idea of doing both tasks at the same time in the recursion each time a set bit is encountered, as described below.</p>
+<h3>Commented</h3>
+<pre class="lang-none prettyprint-override"><code>f = n =&gt;      // f is a recursive function taking n
+n &amp;&amp;          // stop if n = 0
+              // otherwise:
+  (n &amp; -n)    //   isolate the least significant bit set to 1 in n,
+              //   e.g. 14 &amp; -14 --&gt; 2
+  - ~f(       //   add 1 + the result of a recursive call with ...
+    n &amp; n - 1 //     ... n without the bit that we've found above,
+              //     e.g. 14 &amp; 13 --&gt; 12
+  )           //   end of recursive call
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 3 bytes</h1>
 <pre><code>b∑+
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJi4oiRKyIsIiIsIjUiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -39,12 +63,6 @@
  ∑  # Sum
 b   # Of bits
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 24 bytes</h1>
-
-<pre class="lang-none prettyprint-override"><code>f=n=&gt;n&amp;&amp;(n&amp;-n)-~f(n&amp;n-1)
-</code></pre>
-<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/zTbP1i5PTU0jT003T1O3Lg3IyNM11PyfnJ9XnJ@TqpeTn66RpmGkqcmFKmKOIWJobAwU/A8A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 28 bytes</h1>
 
