--- a/q/275973.html
+++ b/q/275973.html
@@ -26,23 +26,42 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>034</td><td>APL+WIN</td><td>241009T075945Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275988#275988">Graham</a></td></tr>
-<tr d-ix="1"><td>011</td><td>05AB1E</td><td>241009T074407Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275987#275987">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>043</td><td>Python 2</td><td>241009T055759Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275986#275986">tsh</a></td></tr>
-<tr d-ix="3"><td>032</td><td>JavaScript Node.js</td><td>241009T051943Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275985#275985">tsh</a></td></tr>
-<tr d-ix="4"><td>007</td><td>Nekomata + e</td><td>241009T021349Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275983#275983">alephalp</a></td></tr>
-<tr d-ix="5"><td>045</td><td>JavaScript ES6</td><td>241008T215928Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275979#275979">Arnauld</a></td></tr>
-<tr d-ix="6"><td>007</td><td>Vyxal</td><td>241008T220257Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275980#275980">emanresu</a></td></tr>
-<tr d-ix="7"><td>055</td><td>Python 3</td><td>241008T214308Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275977#275977">squarero</a></td></tr>
-<tr d-ix="8"><td>019</td><td>Charcoal</td><td>241008T204821Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275976#275976">Neil</a></td></tr>
+<tr d-ix="0"><td>049</td><td>Java</td><td>241009T080943Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275990#275990">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>034</td><td>APL+WIN</td><td>241009T075945Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275988#275988">Graham</a></td></tr>
+<tr d-ix="2"><td>011</td><td>05AB1E</td><td>241009T074407Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275987#275987">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>043</td><td>Python 2</td><td>241009T055759Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275986#275986">tsh</a></td></tr>
+<tr d-ix="4"><td>032</td><td>JavaScript Node.js</td><td>241009T051943Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275985#275985">tsh</a></td></tr>
+<tr d-ix="5"><td>007</td><td>Nekomata + e</td><td>241009T021349Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275983#275983">alephalp</a></td></tr>
+<tr d-ix="6"><td>045</td><td>JavaScript ES6</td><td>241008T215928Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275979#275979">Arnauld</a></td></tr>
+<tr d-ix="7"><td>007</td><td>Vyxal</td><td>241008T220257Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275980#275980">emanresu</a></td></tr>
+<tr d-ix="8"><td>055</td><td>Python 3</td><td>241008T214308Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275977#275977">squarero</a></td></tr>
+<tr d-ix="9"><td>019</td><td>Charcoal</td><td>241008T204821Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275976#275976">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>APL+WIN, 34 bytes</h1>
+<div id="pu0" class="pu"><h1>Java, 49 bytes</h1>
+
+<pre class="lang-java prettyprint-override"><code>(n,d)-&gt;{while((n/=2)&gt;0)d=d/2^d%2*n*n;return d&lt;1;}
+</code></pre>
+<p>Iterative port of <a href="https://codegolf.stackexchange.com/a/275985/52210"><em>@tsh</em>'s first JavaScript answer</a>.</p>
+<p><a href="https://tio.run/##LZBLboMwFEXnWcUTUiU7OHxLf5TsoJlkSKnkYKclJY8ITKIKMe0CusRuhNgOk@NnH@v6ygd@5quD@J7KmncdvPEKhwVAhUq2e15K2JgtwK5paskRSqIVCGaINNVuXGh0iquqhA0gZBNBJuhqPVy@qloSgn4W0XVARSb86EPcRUtcYtpK1bcI4jVMxyk1Gad@V@uMOercVAKOug7ZqrbCz7zg9FZl37SmRF6oF5QXsGNeDEPAwpENMYs0n9m9ZpjcFisiy9DqxDKcbWxtbOfE8sHceWRP40jtkwDbn07Jo9f0yjvpOqpGovKgcB3fcVUe6uFd/f/@geOiVxJzwoyn8xeN0xU" rel="nofollow noreferrer">Try it online.</a></p>
+<p><strong>Explanation:</strong></p>
+<pre class="lang-java prettyprint-override"><code>(n,d)-&gt;{           // Method with two integer parameters and boolean return-type
+  while((n/=2)     //  Before every iteration, integer-divide `n` by 2
+        &gt;0)        //  Continue looping as long as it isn't 0 yet:
+    d=             //   Change `d` to:
+      d/2          //    `d` integer-divided by 2
+         ^         //    bitwised-XOR'ed by:
+          d%2      //     `d` modulo-2
+             *n*n; //     multiplied by the square of `n`
+  return d&lt;1;}     //  After the loop: return whether `d` is now 0
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>APL+WIN, 34 bytes</h1>
 <p>Prompts for numerator followed by denominator:</p>
 <pre><code>i=+/(⌽i↓n)=(i←d÷2)↑n←((d←2⌈⎕)⍴2)⊤⎕
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz3tf6attr7Go569mY/aJudp2moA6Qkph7cbaT5qm5gHZGtopABJo0c9HUCNmo96twBlupYA2f@B2rn@p3EZcBlypXEZcxkBSUsuEyBpaAqhwBJGYNIQLG0KJg25TAA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 11 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 11 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>b0ÛDÂQ*g;oQ
 </code></pre>
 <p>Inputs in the order <span class="math-container">\$n,d\$</span>.</p>
@@ -63,13 +82,13 @@
             # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 43 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 43 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>lambda a,b:int(bin(a/b*2+1)[:1:-1],2)^a%b^b
 </code></pre>
 <p><a href="https://tio.run/##Tc5BCsIwEAXQvacYECGxY82MdmHAk6iFDFIs1FhKN54@tmrSbN98/p/@PT5enkNzvobOPeXuwKHY1o9KWq/cXrZckL5Ysju6IevabaSW0A9zpFEGgbSGNZjSrCIeEPiLVFLCE8Lxh1N0YaqST@m/L9dYT1k9J8xHKY6abLRKn@RKcXL@JHwA" rel="nofollow noreferrer" title="Python 2 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 32 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 32 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>q=&gt;g=p=&gt;(q&gt;&gt;=1)?g(p/2^p%2*q*q):p
 </code></pre>
@@ -83,7 +102,7 @@
 <p><a href="https://tio.run/##bc67CsIwGIbh3csIGP6fekpqB4d09ArcqkOobVRCjlUQvPcouqjN@D3L917kTcY2nN0wN/bYpV4kJ2olwM@C8CjqQKkCX7zmUnB8gKO@CDgtU2tNtLpbaKuANLtwHU73A8HJt/ewQmD4jyUCH@EGYT1CVn30h8neNFupY@aO5e54DlmuocoheyekJw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Be noticed that this function works since numbers in JS are double instead of int. So <code>r</code> may be <code>0.5</code> during execution. Be careful about this behavior when porting it into other languages.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 7 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 7 bytes</h1>
 <pre><code>Ƃ;↔=#Ë=
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpJuqlLsgqWlJWm6FquPNVk_aptiq3y423ZJcVJyMVR8wU1NAwVDLmMFIy5LBRMuQ1MgYWqoYMFlCBQ1AmJDoIwpEBsqmEB0AAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -98,14 +117,14 @@
       =     Check if equal to the denominator
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1>JavaScript (ES6), 45 bytes</h1>
+<div id="pu6" class="pu"><h1>JavaScript (ES6), 45 bytes</h1>
 <p>Expects <code>(numerator)(denominator)</code>. Returns <strong>0</strong> for truthy, or <strong>1</strong> for falsy.</p>
 
 <pre class="lang-none prettyprint-override"><code>p=&gt;q=&gt;(g=k=&gt;k&amp;&amp;(k^p/(q/=2))&amp;1|g(k/2))(p,q*=q)
 </code></pre>
 <p><a href="https://tio.run/##bc47DsIwEEXRnmW4iGYQEGxIQTEuWQFdACkK@YAjf@KAhMTeDYIGiLun07x7KW6FL/uzHebanKpQU7AkHUloSJFUSQLqaFNwKQnEhD8aUOlrgZ25KTkMpdHedNWiMw2wfNdfh/Z@YDj59hqWCBz/cYUgRrhBWI@QZx/9YbbX@bbofOSOx@5EDHmsIYshfyeEJw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 7 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 7 bytes</h1>
 <pre><code>ḋ≬bṘBẆ≈
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLhuIviiaxi4bmYQuG6huKJiCIsIiIsIjhcbjUxIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -116,14 +135,14 @@
       ≈ # Are they both equal?
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 55 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 55 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>lambda a,b:bin(a//b)[:1:-1]==f'{a%b:0{len(bin(b))-3}b}'
 </code></pre>
 <p>Takes input like <code>f(numerator, denominator)</code>.</p>
 <p><a href="https://tio.run/##Tc5BCsIwEIXhvacYEGkCaZtp7MJATqIuMmiwUGORbqT07LFVkmb7vYF/hs/4eHkVnLmE3j7pZsEK0tR5Zuua@FmjLvFqjCsmeyAtp/7u2ToT56WaaS7C8O78yByTApBz2IOs5C6iEtD8ECtMeBJw/ONyujG2yZfr6HzbYwCzQJMwz2LMyizbpl9yxRhdfwlf" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 19 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 19 bytes</h1>
 <pre><code>≔↨Ｎ²θ∧⁼θ⮌θ⁼Ｌθ⊗⊖Ｌ↨Ｎ²
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/9@xuDgzPU/DKbE4VcMzr6C0xK80Nym1SENTR8EIiAs1rbkCijLzSjQc81I0XAtLE3OKNQp1FIJSy1KLgFoKNYGKoMI@qXnpJRlAIR0Fl/zSpJzUFA2X1OSi1NzUvBIgGyqN3SYIsP7/31LB5L9uWQ4A" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes two integers as input. Explanation:</p>
