--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20241009T092040Z
+"   /golfscore                                      20241009T093635Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/68866.html">Superstitious hotel elevator                    : 0068866</a>
 <a href="q/958.html">Random dice tipping                             : 0000958</a>
 <a href="q/275973.html">Decide symmetry of fractions                    : 0275973</a>
 <a href="q/275970.html">Shortest realisation of n+C(n)                  : 0275970</a>
