--- a/q/958.html
+++ b/q/958.html
@@ -26,14 +26,14 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>013</td><td>05AB1E</td><td>180809T134633Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/170349#170349">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>081</td><td>Python</td><td>240429T160002Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/272883#272883">movatica</a></td></tr>
-<tr d-ix="2"><td>053</td><td>Perl 5</td><td>240429T151218Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/272882#272882">Xcali</a></td></tr>
-<tr d-ix="3"><td>012</td><td>Vyxal</td><td>240429T020802Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/272872#272872">emanresu</a></td></tr>
-<tr d-ix="4"><td>058</td><td>MATLAB</td><td>180808T171526Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/170259#170259">aaaaa sa</a></td></tr>
-<tr d-ix="5"><td>052</td><td>R</td><td>131217T172304Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/15991#15991">Sven Hoh</a></td></tr>
-<tr d-ix="6"><td>067</td><td>R</td><td>180808T124545Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/170211#170211">JayCe</a></td></tr>
-<tr d-ix="7"><td>130</td><td>Java 8</td><td>171110T151020Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/147700#147700">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>095</td><td>Java 8</td><td>171110T151020Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/147700#147700">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>013</td><td>05AB1E</td><td>180809T134633Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/170349#170349">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>081</td><td>Python</td><td>240429T160002Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/272883#272883">movatica</a></td></tr>
+<tr d-ix="3"><td>053</td><td>Perl 5</td><td>240429T151218Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/272882#272882">Xcali</a></td></tr>
+<tr d-ix="4"><td>012</td><td>Vyxal</td><td>240429T020802Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/272872#272872">emanresu</a></td></tr>
+<tr d-ix="5"><td>058</td><td>MATLAB</td><td>180808T171526Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/170259#170259">aaaaa sa</a></td></tr>
+<tr d-ix="6"><td>052</td><td>R</td><td>131217T172304Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/15991#15991">Sven Hoh</a></td></tr>
+<tr d-ix="7"><td>067</td><td>R</td><td>180808T124545Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/170211#170211">JayCe</a></td></tr>
 <tr d-ix="8"><td>071</td><td>><></td><td>151005T133645Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/59734#59734">Aaron</a></td></tr>
 <tr d-ix="9"><td>016</td><td>GS2</td><td>151005T061816Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/59696#59696">recursiv</a></td></tr>
 <tr d-ix="10"><td>034</td><td>TIBASIC</td><td>150704T184402Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/52623#52623">lirtosia</a></td></tr>
@@ -50,7 +50,38 @@
 <tr d-ix="21"><td>nan</td><td></td><td>110216T014317Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/963#963">Aman Zee</a></td></tr>
 <tr d-ix="22"><td>071</td><td>JavaScript</td><td>110215T231226Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/959#959">PleaseSt</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>23</s> 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1>Java 8, <s>130</s> 95 bytes</h1>
+
+<pre class="lang-java prettyprint-override"><code>v-&gt;{for(int d=0,p,i=10;i--&gt;0;System.out.print(d--))for(p=d;p==d++|p+d==7;d*=Math.random())d=6;}
+</code></pre>
+<p><a href="https://tio.run/##XVA9T8MwEN35FW90SJOWSoXBuBtju1RiQQwmdloXx7biSwQq@e3BScvCyaeT7@u9d2fZy@KsPsfKyhixk8Zd7gDjSLe1rDT20xfovVGo2OsU@oyn3JA8vUiSTIU9HATGvtheat@yNA8lVouwMOJhxU1RbFf88B1JN6XvqAxt6mCqKLJsag9C8SCEyvOfkCshnri6FztJp7KVTvmGZZkSj3wY@RU0dB82gd6wZ25NYs4OlPYe394hsyvt5RIvX7rqSINOGnXnKjLeYb0BmUZHkMdRE6JvNKJsgtVodewsxXn@T0tSwWGexXqTQp7ftgOurJjrrJ0vMtl/jdaxW22YbzaMvw" rel="nofollow noreferrer">Try it online.</a></p>
+<p>As full program with verbose main-method this would be <strong><s>178</s> 132 bytes</strong> instead:</p>
+<pre class="lang-java prettyprint-override"><code>interface M{static void main(String[]a){for(int d=0,p,i=10;i--&gt;0;System.out.print(d--))for(p=d;p==d++|p+d==7;d*=Math.random())d=6;}}
+</code></pre>
+<p><a href="https://tio.run/##FcqxDoIwEADQX@nYCiW46NCcf8DEaBwuHOhhaJtykBjk2yu@@Y24oh3pnTN76dOAXa@abRYU7tQamNSE7HUrif3z/kCzDSHp4yqCuowlw7l2bO2tdu1nln6qwiJVPLZostaYf49ALgJQUXxjQQBXRydoUF5VQk9h0sYQXNy@5/wD" rel="nofollow noreferrer">Try it online.</a></p>
+<p><strong>Explanation:</strong></p>
+<pre class="lang-java prettyprint-override"><code>v-&gt;{              // Method with empty unused parameter and no return
+  for(int d=0,    //  Random dice integer, starting at 0
+                  //  (initially, any value for `d` is fine)
+          p,      //  Previous dice-roll, starting uninitialized
+      i=10;i--&gt;0  //  Loop 10 times:
+      ;           //    After every iteration:
+       System.out.print(
+                  //     Print without newline:
+         d        //      The current dice-roll
+          --))    //     And decrease `d` by 1 afterwards with `d--`
+    for(p=d;      //   Set `p` to the current `d`
+        p==d      //   Loop as long as `p` is still equal to `d`
+            ++    //   And increase `d` by 1 afterwards with `d++`
+        |         //   Or
+         p+d==7   //   As long as `p` and `d` combined equals 7
+                  //   (aka `p` and `d` are at opposite sides of the dice)
+      d*=Math.random())d=6;}
+                  //    Do a random dice roll in the range [0,6)
+                  //    (which is why we've did `d++` in the loop-condition)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>23</s> 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>TF6LsD7α‚KΩD?
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f8/xM3Mp9jF/NzGRw2zvM@tdLH//x8A" rel="nofollow noreferrer">Try it online.</a></p>
@@ -71,7 +102,7 @@
            D?  #  Duplicate, pop and output it without newline
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>87</s> 81 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>87</s> 81 bytes</h1>
 <p><em>-6 bytes by <a href="/users/100664/emanresu-a">emanresu A</a></em></p>
 <pre class="lang-python prettyprint-override"><code>from random import*
 p=0
@@ -79,13 +110,13 @@ for _ in'x'*10:print(p:=choice([*{1,2,3,4,5,6}-{p,7-p}]))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vwYKlpSVpuhY3A9OK8nMVihLzUoBUZm5BflGJFleBrQFXWn6RQrxCZp56hbqWoYFVQVFmXolGgZVtckZ-ZnKqRrRWtaGOkY6xjomOqY5ZrW51gY65bkFtrKYmxGCo-TB7AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 53 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 53 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>say map$b=(grep$_+$b-7&amp;&amp;$_-$b,1..6)[rand!$b*2+4],0..9
 </code></pre>
 <p><a href="https://tio.run/##K0gtyjH9/784sVIhN7FAJclWI70otUAlXlslSddcTU0lXlclScdQT89MM7ooMS9FUSVJy0jbJFbHQE/P8v//f/kFJZn5ecX/dX1N9QwMDQA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 12 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 12 bytes</h1>
 <pre><code>₀(:7ε&quot;6ɾ$F℅…
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLigoAoOjfOtVwiNsm+JEbihIXigKYiLCIiLCIiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -97,18 +128,18 @@ for _ in'x'*10:print(p:=choice([*{1,2,3,4,5,6}-{p,7-p}]))
   :7ε&quot;       # [prev,7-prev] (stack is padded with zeros)
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h2>MATLAB 58 bytes</h2>
+<div id="pu5" class="pu"><h2>MATLAB 58 bytes</h2>
 
 <pre><code>a=randi(6)
 for i=1:9;b=1:6;b([a,7-a])=[];a=b(randi(4))
 end
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h2>R, <strike>56</strike> 52</h2>
+<div id="pu6" class="pu"><h2>R, <strike>56</strike> 52</h2>
 <pre><code>for(i in 0:9)cat(F&lt;-sample(setdiff(1:6,c(F,7-F)),1))
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, 67 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, 67 bytes</h1>
 
 
 
@@ -124,36 +155,6 @@ end
                              +cumsum(sample((-2:2)[-3],9,T)))      #9 tippings in c(-2,-1,1,2)
                                                              %%6+1 #converts to values in [0,6]
               [                                                   ]#
-</code></pre>
-</div>
-<div id="pu7" class="pu"><h1>Java 8, 130 bytes</h1>
-
-<pre class="lang-java prettyprint-override"><code>v-&gt;{int d=(int)(Math.random()*6+1),i=10,p;String r=&quot;&quot;+d;for(;i--&gt;0;r+=d)for(p=d;p==d|p+d==7;d=(int)(Math.random()*6+1));return r;}
-</code></pre>
-<p><a href="https://tio.run/##dZA/b8MgEMX3fIpTJqhj54@UdqBk65gslbpUHSiQhBQDgsNqlfqzuzjOWgl0upPu3e@9i@hE7YN2F/U1SCtSgr0w7joDMA51PAqp4TC2AK8YjTuBJG/eKOgoK9O@/PISCjQSDuCAw9DVu2vZBsVJKZTsBZ6bKJzyLaEPj9WaLgxfrxaB3SUjn88rxY4@EmbqerdiseKKjn3gigXO1W@oFOdP7H9NyqLGHB1E1g9s4gr50xauO143crfFHpnuvn@AoJO35RJevrXMqAHPGo7ZSTTewWYLaFqdAD2cNELyrYYk2mA1RJ2yxXTbH1FHy8UXA/PMN9tSququXrL7SajbxmdsQjmN1hHXSOKytfQW5BRlP@uHPw" rel="nofollow noreferrer">Try it here.</a></p>
-<p>As full program with verbose main-method this would be <strong>178 bytes</strong> instead:</p>
-<pre class="lang-java prettyprint-override"><code>interface M{static void main(String[]a){int d=(int)(Math.random()*6+1),i=10,p;String r=&quot;&quot;+d;for(;i--&gt;0;r+=d)for(p=d;p==d|p+d==7;d=(int)(Math.random()*6+1));System.out.print(r);}}
-</code></pre>
-<p><a href="https://tio.run/##dYyxDoIwFEV/pWFqLRBYdGief8DEaBxeeKDF0DblSWKQb68YZ6eTm5x7Rlyw8KF3Iz1Sso77OGDXi2adGdl2YvGWxITWyZajdbfLFdW6e4JA7lCyQb6XER35SarDUdcqt1BXeTC/g4iQZZrM4KM0tijOlYkaSH13ADIBgN5BE8DJ/G8q075m7qfSP7kMe5dlVGbbUvoA" rel="nofollow noreferrer">Try it here.</a></p>
-<p>Semi-port of <a href="https://codegolf.stackexchange.com/a/963/52210"><em>@AmanZeeKVerma</em>'s Bash answer</a>.</p>
-<p><strong>Explanation:</strong></p>
-<pre class="lang-java prettyprint-override"><code> v-&gt;{              // Method with empty unused parameter and String return-type
-   int d=(int)(Math.random()*6+1),
-                   //  Random dice-roll 1-6
-       i=10,       //  Counter-integer, starting at 10
-       p;          //  Temp integer to store new side
-   String r=&quot;&quot;+d;  //  Result-String, starting at the first dice-roll
-   for(;i--&gt;0;     //  Loop (1) 10 times:
-       r+=d)       //    After every iteration, append the result with a random side
-     for(p=d;      //   Set the new side to the current side
-         p==d      //   Loop (2) as long as the new side and current side are the same
-         |p+d==7;  //   or as long as both combined are exactly 7:
-       d=(int)(Math.random()*6+1)
-                   //    Set the new side to a random side 1-6
-     );            //   End of loop (2)
-                   //  End of loop (1) (implicit / single-line body)
-  return r;        //  Return the result-String
-}                  // End of method
 </code></pre>
 </div>
 <div id="pu8" class="pu"><h1><a href="https://esolangs.org/wiki/Fish" rel="nofollow">>&lt;></a>, 71 bytes</h1>
