--- a/q/958.html
+++ b/q/958.html
@@ -52,17 +52,17 @@
 </table>
 <div id="pu0" class="pu"><h1>Java 8, <s>130</s> 95 bytes</h1>
 
-<pre class="lang-java prettyprint-override"><code>v-&gt;{for(int d=0,p,i=10;i--&gt;0;System.out.print(d--))for(p=d;p==d++|p+d==7;d*=Math.random())d=6;}
+<pre class="lang-java prettyprint-override"><code>v-&gt;{for(int d=9,p,i=10;i--&gt;0;System.out.print(d--))for(p=d;p==d++|p+d==7;d*=Math.random())d=6;}
 </code></pre>
-<p><a href="https://tio.run/##XVA9T8MwEN35FW90SJOWSoXBuBtju1RiQQwmdloXx7biSwQq@e3BScvCyaeT7@u9d2fZy@KsPsfKyhixk8Zd7gDjSLe1rDT20xfovVGo2OsU@oyn3JA8vUiSTIU9HATGvtheat@yNA8lVouwMOJhxU1RbFf88B1JN6XvqAxt6mCqKLJsag9C8SCEyvOfkCshnri6FztJp7KVTvmGZZkSj3wY@RU0dB82gd6wZ25NYs4OlPYe394hsyvt5RIvX7rqSINOGnXnKjLeYb0BmUZHkMdRE6JvNKJsgtVodewsxXn@T0tSwWGexXqTQp7ftgOurJjrrJ0vMtl/jdaxW22YbzaMvw" rel="nofollow noreferrer">Try it online.</a></p>
+<p><a href="https://tio.run/##XVA9T8MwEN35FW90SJOWSqVCxt0Y26USC2Iwttu6OI4VXyJQyW8PTloWTj6dfF/vvTvLThZn/TkoJ2PEVlp/uQOsJ9McpDLYjV@gq62GYq9j6DKecn3y9CJJsgo7eAgMXbG5HOqGpXlo8TQLMyseFtwWxWbB99@RTFXWLZWhSR1MF0WWje1BaB6E0Hn@E3ItxJrre7GVdCob6XVdsSzT4pH3A7@ChvbDJdAb9sStSszZntLe49s7ZHalPZ/j5cuolgzoZHBovSJbeyxXIFuZCKpxNIRYVwZRVsEZNCa2juI0/6clqeCwz2K5SiHPb9sBXyrmW@emi4z2X6Pz7Fbrp5v1wy8" rel="nofollow noreferrer">Try it online.</a></p>
 <p>As full program with verbose main-method this would be <strong><s>178</s> 132 bytes</strong> instead:</p>
-<pre class="lang-java prettyprint-override"><code>interface M{static void main(String[]a){for(int d=0,p,i=10;i--&gt;0;System.out.print(d--))for(p=d;p==d++|p+d==7;d*=Math.random())d=6;}}
+<pre class="lang-java prettyprint-override"><code>interface M{static void main(String[]a){for(int d=9,p,i=10;i--&gt;0;System.out.print(d--))for(p=d;p==d++|p+d==7;d*=Math.random())d=6;}}
 </code></pre>
-<p><a href="https://tio.run/##FcqxDoIwEADQX@nYCiW46NCcf8DEaBwuHOhhaJtykBjk2yu@@Y24oh3pnTN76dOAXa@abRYU7tQamNSE7HUrif3z/kCzDSHp4yqCuowlw7l2bO2tdu1nln6qwiJVPLZostaYf49ALgJQUXxjQQBXRydoUF5VQk9h0sYQXNy@5/wD" rel="nofollow noreferrer">Try it online.</a></p>
+<p><a href="https://tio.run/##FcqxDoIwEADQX@nYCiW4aExz/gETo3G4cKCHoW3KSWKQb6/45jfignakV87spU8Ddr1q1llQuFNLYFITstetJPaP2x3NOoSk96sILmUsGY61Y2uvtWs/s/RTFd5SxX2LJmuN@fcI5CIAFcU3FgRwdnSABuVZJfQUJm0MwcltW84/" rel="nofollow noreferrer">Try it online.</a></p>
 <p><strong>Explanation:</strong></p>
 <pre class="lang-java prettyprint-override"><code>v-&gt;{              // Method with empty unused parameter and no return
-  for(int d=0,    //  Random dice integer, starting at 0
-                  //  (initially, any value for `d` is fine)
+  for(int d=9,    //  Random dice integer, starting at 9
+                  //  (initially, any value outside range [0,6] for `d` is fine)
           p,      //  Previous dice-roll, starting uninitialized
       i=10;i--&gt;0  //  Loop 10 times:
       ;           //    After every iteration:
@@ -71,13 +71,13 @@
          d        //      The current dice-roll
           --))    //     And decrease `d` by 1 afterwards with `d--`
     for(p=d;      //   Set `p` to the current `d`
-        p==d      //   Loop as long as `p` is still equal to `d`
+        p==d      //   Inner loop as long as `p` is still equal to `d`
             ++    //   And increase `d` by 1 afterwards with `d++`
         |         //   Or
          p+d==7   //   As long as `p` and `d` combined equals 7
                   //   (aka `p` and `d` are at opposite sides of the dice)
       d*=Math.random())d=6;}
-                  //    Do a random dice roll in the range [0,6)
+                  //    Do a random 'dice roll' in the range [0,6)
                   //    (which is why we've did `d++` in the loop-condition)
 </code></pre>
 </div>
