--- a/q/84260.html
+++ b/q/84260.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>013</td><td>How dare you fuck the brain</td><td>241008T203114Z</td><td><a href="https://codegolf.stackexchange.com/questions/84260/add-two-numbers/275974#275974">Gleb</a></td></tr>
+<tr d-ix="0"><td>007</td><td>How dare you fuck the brain</td><td>241008T203114Z</td><td><a href="https://codegolf.stackexchange.com/questions/84260/add-two-numbers/275974#275974">Gleb</a></td></tr>
 <tr d-ix="1"><td>037</td><td>Qdeql</td><td>240909T011231Z</td><td><a href="https://codegolf.stackexchange.com/questions/84260/add-two-numbers/275426#275426">Bbrk24</a></td></tr>
 <tr d-ix="2"><td>001</td><td>Jelly</td><td>160702T004637Z</td><td><a href="https://codegolf.stackexchange.com/questions/84260/add-two-numbers/84261#84261">Dennis</a></td></tr>
 <tr d-ix="3"><td>003</td><td>Pyth</td><td>210928T194910Z</td><td><a href="https://codegolf.stackexchange.com/questions/84260/add-two-numbers/235805#235805">adrianus</a></td></tr>
@@ -264,11 +264,10 @@
 <tr d-ix="235"><td>005</td><td>Minkolang 0.15</td><td>160702T011140Z</td><td><a href="https://codegolf.stackexchange.com/questions/84260/add-two-numbers/84264#84264">El&#39;e</a></td></tr>
 <tr d-ix="236"><td>001</td><td>05AB1E</td><td>160702T010439Z</td><td><a href="https://codegolf.stackexchange.com/questions/84260/add-two-numbers/84263#84263">Adnan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://esolangs.org/wiki/How_dare_you_fuck_the_brain" rel="nofollow noreferrer">How dare you fuck the brain</a>, 13 bytes</h1>
-<pre><code>;^;v
-D^Iv)^NH
+<div id="pu0" class="pu"><h1><a href="https://esolangs.org/wiki/How_dare_you_fuck_the_brain" rel="nofollow noreferrer">How dare you fuck the brain</a>, <s>13</s> 7 bytes</h1>
+<pre><code>;^;v+NH
 </code></pre>
-<p><a href="https://tio.run/##fZLBUoMwFEX3fEX63BCxI9VpFzBx1Wq7qS7cVZihIR0YGcgEaOUH3Dv@oT9SAyVI21QWDOTde97LTXhVRFl6v98XAWdkZXvXd@OJS7OQEQBwfXdrTP3FFvvLef1PObHdsH5RWTe4iNPChHVVsByBlRfCTFhq1naMsbGL4oSZr6Jk2DEQijdNZUW5RwgsADt101XIPYuMZJ0lx4ppTzHUKnypCLnevW1qet@LrB1mp5EwVQ98w9JQbgu3DtRzLKE1KPE/WgJqbGvkEWXQCC0JJX9SS0ld9UG42yPZGsQV1Mki1ETdFQYE3lJwaC@avgm3JhmK6jQgNj4stizzmIUlbKiF3V6AXWr@8/nVORCVdJUs0CTYoUCwIKxQyDZxykLA7louvDd6Ss4DsrUdvnsdyGmHMtXBOyI9XO1z7BwcJT8tPYHKTq4r0oMtM@gff/2wJGcXMW6HKUTVXX1Sjx6nvCxMjBXmgzJeoNnz40yITKj9LTOUlzRCjRrUFe122RzJfj82RpNf" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##fZJBT4MwGIbv/Iru80LFRabZDjT15HRepgdvkyWsdIFIoCmwSbKzd@M/9I/MwijDDeQATb/3fb725RNFFiTx7X6feYLThe1e3ownhCU@pwBAlmRjzWfliglqE798MVUxhAzjzIRVkfEUgZVm0ox4bJZGjLGxDcKIm68y59gxEArXVWXBhEspPAF2ynYLX7gWHak6j/4q7luKYadiqRS@6HZvqlq370XVDmdngTR1D3zFY19dC9cO1HLMoTZo8T9aCvrY1sil2tAhtBSUHqWWlhK9oIK0SHYH4gLKZBGqom4KAwpvMTisFU3bhGuTCkV3GlAbHzZrlvmXhRVs2Am77oH1Nf/5/GociCm6ThZY5G2RJ7nnF8jn6zDmPmCyUhvvlZ7R84Dszg7frQ70tEMed8EbIjuM9jl2Bo6Wn5YeQWen9jXpzlYZtH9/@fAo5b0Y0mAyWTSjT8ujh7HIMxNjjflgXGRo@vwwlTKR@n7zBKU5C1ClBj2ipK/frm94dsfZqb77/dgYTX4B" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://esolangs.org/wiki/Qdeql" rel="nofollow noreferrer">Qdeql</a>, 37 bytes</h1>
 <p>Input in bytes rather than ASCII. Although Qdeql is limited to bytes, this would work with any (arbitrarily large) finite cell size.</p>
