--- a/q/59347.html
+++ b/q/59347.html
@@ -605,7 +605,7 @@
 )
 </code></pre>
 <p><a href="https://tio.run/##fZJBT4MwGIbv/Iru80LFRabRA@S7meguxoM3xIS1XSCSrmHMhT/g3fgP/SNYYGXd1nlpSL/nfd/2Laqp85W8bds6UwKTML28ubuP2YoLBIC5R/UaM4VhzLuF6V1PVYWsfXiTi6YWawLBuq78Uki/k1F6JSTXGPW2eVEK/7XaCBp5hBTLHkiYShFhDjTqMhOu0gBnei7KQ@LBIqZO4l0TXLnVn/3MrXvRs@ESLK98k7E/@KAgluIZdgID/8MimGMHsxSNwAEG2hT3aGDQ2Hygii2n0GFxAV2zhPRVj4MJ6seBiFnV2CK6E@lSTNIEQzps7rz8Qy@qzaZOs@szZufCf7@@RwVh2t00C6zMtiSrRMYbwsWykIIDjRd646PnGZ4WFDoTfqwEPE7YSJf56MiGf/zU9gkigx@PHruu7ZfuL9@2fw" rel="nofollow noreferrer">Try it online!</a></p>
-<h1>Same thing but with the <code>G</code> command</h1>
+<h1>Same thing but with the <code>G</code> command and without the newline</h1>
 <pre><code>I G
 </code></pre>
 <p><a href="https://tio.run/##fZKxTsMwEIb3PoU5FptQkYJgiHVMSKULYmArQUptV42IXCtNqfoC7Ig35EWCk8bBbV0yWNHd/393@WOzrRZLfVPXVWYUTuP04vr2joulVAgAEzK2JxcGYy6bQ9jqwJS5rijMtpVaEYhWVUkLpWljYowNNou8UPSlXCuWDAjJ521nKkyKCBNgSTNqKk0a4cj2VbGvePAUw6DizSqkCbs/2l7Y92x7u93FoqRuBrtUWtrPYp2DeI4n6AxO/I8Wwa0djVJ0hoAwslD8k0ZOyt0LGu6R4gDiHJpkCWmj7htnCK8aEuFF45tYZ7KhuElnGLNdsWPRfRazsGEQdnUCdmr4z@dX7yDC0l2yIIpsQ7JSZXJLpJrnWklgfGYL761e4HFAcXDCtzcBDyesdQjeE8Xuah9jHyFx8sPWGFx2tu5I97HNwP/9zaOKlTqJ4f3FSbHZN9dmXVHW3LE2zbqOfwE" rel="nofollow noreferrer">Try it online</a></p>
