--- a/q/275906.html
+++ b/q/275906.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>142</td><td>C64 BASIC</td><td>241009T144341Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275995#275995">jdt</a></td></tr>
+<tr d-ix="0"><td>122</td><td>C64 BASIC</td><td>241009T144341Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275995#275995">jdt</a></td></tr>
 <tr d-ix="1"><td>017</td><td>Uiua</td><td>241006T163537Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275953#275953">nyxbird</a></td></tr>
 <tr d-ix="2"><td>102</td><td>APL+WIN</td><td>241008T113824Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275966#275966">Graham</a></td></tr>
 <tr d-ix="3"><td>264</td><td>C GCC</td><td>241006T144340Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275952#275952">matteo_c</a></td></tr>
@@ -39,12 +39,12 @@
 <tr d-ix="10"><td>017</td><td>Jelly</td><td>241003T150222Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275921#275921">Unrelate</a></td></tr>
 <tr d-ix="11"><td>003</td><td>05AB1E</td><td>241003T095245Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275916#275916">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.c64-wiki.com/wiki/BASIC" rel="nofollow noreferrer">C64 BASIC</a>, 142 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.c64-wiki.com/wiki/BASIC" rel="nofollow noreferrer">C64 BASIC</a>, 122 bytes</h1>
 
-<pre class="lang-none prettyprint-override"><code>1inputs$,d$:printchr$(147):p=1524:fori=1tolen(s$):pokep,asc(mid$(s$,i,1))-64:p=p+val(mid$(&quot;1011519190894909&quot;,1+val(mid$(d$,i,1))*2,2))-50:next
+<pre class="lang-none prettyprint-override"><code>1inputs$,d$:?cH(147):p=1524:fOi=1tolen(s$):pOp,aS(mI(s$,i,1))-64:p=p+vA(mI(&quot;1011519190894909&quot;,1+vA(mI(d$,i,1))*2,2))-50:nE
 </code></pre>
 <p><a href="https://i.sstatic.net/eAQNjPfv.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/eAQNjPfv.png" alt="enter image description here" /></a></p>
-<p><a href="https://stigc.dk/c64/basic/?s=2RcvBCgIhGEXhfY8xuND6A69opTAPM4xG0qSiFj1-QkHbc_gQU3n2xsgzV2pMfb1VxqHPwpUZRml3zTXO6HkLiTc2cr6HQktb-SN6NhJFghDHkx6iHF7L9h0TJGBgYeXFaivtRPhf_2N7RWpgI10K7777AA" rel="nofollow noreferrer">Try in emulator</a></p>
+<p><a href="https://stigc.dk/c64/basic/?s=2M8zMKygtKVbRSVGxsk_20DA0Mde0KrA1NDUysUrzz7Q1LMnPSc3TKFYBivoX6CQGa-R6Ank6mTqGmpq6ZiZAtQXaZY4gUSVDA0NDU0NLQ0sDC0sTSwNLJR1DqFQKVIOWkY4RUJupgVWeKxcA" rel="nofollow noreferrer">Try in emulator</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, <strike>19</strike> 17 bytes</h1>
 <pre><code>⬚@ ˘⊡∩▽’⍜⇌◰.\+⊂⊸⧻
