--- a/q/47870.html
+++ b/q/47870.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>025</td><td>Zsh</td><td>230530T042818Z</td><td><a href="https://codegolf.stackexchange.com/questions/47870/count-the-number-of-ones-in-an-unsigned-16-bit-integer/261370#261370">roblogic</a></td></tr>
-<tr d-ix="1"><td>010</td><td>8051 opcode</td><td>241009T051537Z</td><td><a href="https://codegolf.stackexchange.com/questions/47870/count-the-number-of-ones-in-an-unsigned-16-bit-integer/275984#275984">l4m2</a></td></tr>
+<tr d-ix="0"><td>010</td><td>8051 opcode</td><td>241009T051537Z</td><td><a href="https://codegolf.stackexchange.com/questions/47870/count-the-number-of-ones-in-an-unsigned-16-bit-integer/275984#275984">l4m2</a></td></tr>
+<tr d-ix="1"><td>025</td><td>Zsh</td><td>230530T042818Z</td><td><a href="https://codegolf.stackexchange.com/questions/47870/count-the-number-of-ones-in-an-unsigned-16-bit-integer/261370#261370">roblogic</a></td></tr>
 <tr d-ix="2"><td>002</td><td>Thunno 2 S</td><td>230610T161535Z</td><td><a href="https://codegolf.stackexchange.com/questions/47870/count-the-number-of-ones-in-an-unsigned-16-bit-integer/261740#261740">The Thon</a></td></tr>
 <tr d-ix="3"><td>005</td><td>BitCycle</td><td>220516T153843Z</td><td><a href="https://codegolf.stackexchange.com/questions/47870/count-the-number-of-ones-in-an-unsigned-16-bit-integer/247397#247397">Romanp</a></td></tr>
 <tr d-ix="4"><td>028</td><td>SMALL</td><td>220516T151815Z</td><td><a href="https://codegolf.stackexchange.com/questions/47870/count-the-number-of-ones-in-an-unsigned-16-bit-integer/247396#247396">stefvans</a></td></tr>
@@ -105,7 +105,27 @@
 <tr d-ix="76"><td>017</td><td>Java</td><td>150317T005425Z</td><td><a href="https://codegolf.stackexchange.com/questions/47870/count-the-number-of-ones-in-an-unsigned-16-bit-integer/47872#47872">TheNumbe</a></td></tr>
 <tr d-ix="77"><td>004</td><td>Pyth</td><td>150317T003906Z</td><td><a href="https://codegolf.stackexchange.com/questions/47870/count-the-number-of-ones-in-an-unsigned-16-bit-integer/47871#47871">isaacg</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 25 bytes</h1>
+<div id="pu0" class="pu"><h1>8051 opcode, 10 bytes</h1>
+<pre><code>    clr a       ; E4
+p:  xch a, r1   ; C9    Grab bit from r1
+    rlc a       ; 33    and swap with r0
+    xch a, r0   ; C8    so bits come from
+    xch a, r1   ; C9    r1 and r0 alternately
+    addc a, #16 ; 34 10
+    jnc p       ; 50 F8 Sixteen additions
+    ret         ; 22    to reach carry
+</code></pre>
+<p>Input r0 and r1, output acc</p>
+<h1>8086 opcode, 9 bytes</h1>
+<pre><code>0100 31C0          XOR     AX,AX
+0102 D1EF          SHR     DI,1
+0104 1410          ADC     AL,10
+0106 73FA          JNB     0102
+0108 C3            RET
+</code></pre>
+<p>Same idea</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 25 bytes</h1>
 <pre class="lang-none prettyprint-override"><code>&lt;&lt;&lt;${(c)#$(([##2]$1))//0}
 </code></pre>
 <p><a href="https://tio.run/##qyrO@J@moVn938bGRqVaI1lTWUVDI1pZ2ShWxVBTU1/foPZ/LVeaggkQGxobm4MoM2Nz0/8A" rel="nofollow noreferrer">Try it online!</a>
@@ -117,18 +137,6 @@
 <li><code>${ ... //0}</code> remove <code>0</code>s</li>
 <li><code>&lt;&lt;&lt;${(c)#`expr`}</code> print length of <code>`expr`</code></li>
 </ul>
-</div>
-<div id="pu1" class="pu"><h1>8051 opcode, 10 bytes</h1>
-<pre><code>    clr a       ; E4
-p:  xch a, r1   ; C9    Grab bit from r1
-    rlc a       ; 33    and swap with r0
-    xch a, r0   ; C8    so bits come from
-    xch a, r1   ; C9    r1 and r0 alternately
-    addc a, #16 ; 34 10
-    jnc p       ; 50 F8 Sixteen additions
-    ret         ; 22    to reach carry
-</code></pre>
-<p>Input r0 and r1, output acc</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/Thunno/Thunno2" rel="nofollow noreferrer">Thunno 2</a> <code>S</code>, 2 <a href="https://github.com/Thunno/Thunno2/blob/main/docs/codepage.md" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>2B
