--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20241010T015259Z
+"   /golfscore                                      20241010T022810Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/150300.html">Frequency Distribution of Mixed Dice Rolls      : 0150300</a>
 <a href="q/73128.html">Output the Juggler sequence                     : 0073128</a>
 <a href="q/275853.html">Score the science points in 7 Wonders           : 0275853</a>
 <a href="q/275998.html">Output 97th charecter of the ASCII tabble (or a): 0275998</a>
