--- a/q/958.html
+++ b/q/958.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>095</td><td>Java 8</td><td>171110T151020Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/147700#147700">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>094</td><td>Java 8</td><td>171110T151020Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/147700#147700">Kevin Cr</a></td></tr>
 <tr d-ix="1"><td>013</td><td>05AB1E</td><td>180809T134633Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/170349#170349">Kevin Cr</a></td></tr>
 <tr d-ix="2"><td>081</td><td>Python</td><td>240429T160002Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/272883#272883">movatica</a></td></tr>
 <tr d-ix="3"><td>053</td><td>Perl 5</td><td>240429T151218Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/272882#272882">Xcali</a></td></tr>
@@ -50,35 +50,38 @@
 <tr d-ix="21"><td>nan</td><td></td><td>110216T014317Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/963#963">Aman Zee</a></td></tr>
 <tr d-ix="22"><td>071</td><td>JavaScript</td><td>110215T231226Z</td><td><a href="https://codegolf.stackexchange.com/questions/958/random-dice-tipping/959#959">PleaseSt</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Java 8, <s>130</s> 95 bytes</h1>
+<div id="pu0" class="pu"><h1>Java 8, <s>130</s> <s>95</s> 94 bytes</h1>
 
-<pre class="lang-java prettyprint-override"><code>v-&gt;{for(int d=9,p,i=10;i--&gt;0;System.out.print(d--))for(p=d;p==d++|p+d==7;d*=Math.random())d=6;}
+<pre class="lang-java prettyprint-override"><code>v-&gt;{long d=9,p,r=0;for(;r&lt;1e9;r=r*10+d--)for(p=d;p==d++|p+d==7;d*=Math.random())d=6;return r;}
 </code></pre>
-<p><a href="https://tio.run/##XVA9T8MwEN35FW90SJOWSqVCxt0Y26USC2Iwttu6OI4VXyJQyW8PTloWTj6dfF/vvTvLThZn/TkoJ2PEVlp/uQOsJ9McpDLYjV@gq62GYq9j6DKecn3y9CJJsgo7eAgMXbG5HOqGpXlo8TQLMyseFtwWxWbB99@RTFXWLZWhSR1MF0WWje1BaB6E0Hn@E3ItxJrre7GVdCob6XVdsSzT4pH3A7@ChvbDJdAb9sStSszZntLe49s7ZHalPZ/j5cuolgzoZHBovSJbeyxXIFuZCKpxNIRYVwZRVsEZNCa2juI0/6clqeCwz2K5SiHPb9sBXyrmW@emi4z2X6Pz7Fbrp5v1wy8" rel="nofollow noreferrer">Try it online.</a></p>
-<p>As full program with verbose main-method this would be <strong><s>178</s> 132 bytes</strong> instead:</p>
+<p>-1 byte thanks to <em>@emanresuA</em>.</p>
+<p><a href="https://tio.run/##LZBPb8IwDMXvfIp3bCktfySGUMhuO8IFaZdph6wJEJYmVeJUm1g/e5cCki3Llu3f07uKTpRX@T3URoSAvdD2NgG0JeVPolY4jC1gnD2jzt6dluhylmZ9yhSBBOkaB1hwDF35eruvSr6dtTPPF@zkfMb8bqm2zHM/XS4KWZb5OG25ZC3nsij@2kJyvmFyyveCLpUXVromy3PJX5hXFL2FZ/3AHsw2fpnEfKK7UVOThGdH8tqePz4h8ofq@RxvP6qOpEAXhVO0NWlnsVqDdKMCyOGsCME1CkE0rVHwKkRD4X4/qkxWQPMlg97x1TqVonh@B46/gVRTuUhVm9BkbGarOrPRmPxu0sOmftIP/w" rel="nofollow noreferrer">Try it online.</a></p>
+<p>As full program with verbose main-method and printing the dice-rolls directly would be <strong><s>178</s> 132 bytes</strong> instead (for explanation, <a href="https://codegolf.stackexchange.com/revisions/147700/4">see edit history of 95 bytes version</a>):</p>
 <pre class="lang-java prettyprint-override"><code>interface M{static void main(String[]a){for(int d=9,p,i=10;i--&gt;0;System.out.print(d--))for(p=d;p==d++|p+d==7;d*=Math.random())d=6;}}
 </code></pre>
 <p><a href="https://tio.run/##FcqxDoIwEADQX@nYCiW4aExz/gETo3G4cKCHoW3KSWKQb6/45jfignakV87spU8Ddr1q1llQuFNLYFITstetJPaP2x3NOoSk96sILmUsGY61Y2uvtWs/s/RTFd5SxX2LJmuN@fcI5CIAFcU3FgRwdnSABuVZJfQUJm0MwcltW84/" rel="nofollow noreferrer">Try it online.</a></p>
 <p><strong>Explanation:</strong></p>
-<pre class="lang-java prettyprint-override"><code>v-&gt;{              // Method with empty unused parameter and no return
-  for(int d=9,    //  Random dice integer, starting at 9
-                  //  (initially, any value outside range [0,6] for `d` is fine)
-          p,      //  Previous dice-roll, starting uninitialized
-      i=10;i--&gt;0  //  Loop 10 times:
-      ;           //    After every iteration:
-       System.out.print(
-                  //     Print without newline:
-         d        //      The current dice-roll
-          --))    //     And decrease `d` by 1 afterwards with `d--`
-    for(p=d;      //   Set `p` to the current `d`
-        p==d      //   Inner loop as long as `p` is still equal to `d`
-            ++    //   And increase `d` by 1 afterwards with `d++`
-        |         //   Or
-         p+d==7   //   As long as `p` and `d` combined equals 7
-                  //   (aka `p` and `d` are at opposite sides of the dice)
+<pre class="lang-java prettyprint-override"><code>v-&gt;{               // Method with empty unused parameter and long return-type
+  int d=9,         //  Random dice integer, starting at 9
+                   //  (initially, any value outside range [0,6] for `d` is fine)
+      p,           //  Previous dice-roll, starting uninitialized
+      r=0;         //  Result-long, starting at 0
+  for(;r&lt;1e9       //  Loop as long as the result is not 10 digits yet:
+      ;            //    After every iteration:
+       r=          //     Update the result to:
+         r*10+d    //      Multiply by 10 and add the dice-roll
+                   //      (aka, append the dice-roll to the result-long)
+               --) //     And decrease `d` by 1 afterwards with `d--`
+    for(p=d;       //   Set `p` to the current `d`
+        p==d       //   Inner loop as long as `p` is still equal to `d`
+            ++     //   And increase `d` by 1 afterwards with `d++`
+        |          //   Or
+         p+d==7    //   As long as `p` and `d` combined equals 7
+                   //   (aka `p` and `d` are at opposite sides of the dice)
       d*=Math.random())d=6;}
-                  //    Do a random 'dice roll' in the range [0,6)
-                  //    (which is why we've did `d++` in the loop-condition)
+                   //    Do a random 'dice roll' in the range [0,6)
+                   //    (which is why we've did `d++` in the loop-condition)
+  return r;}       //  After the loops, return the result-long
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>23</s> 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
