--- a/q/47870.html
+++ b/q/47870.html
@@ -106,8 +106,8 @@
 <tr d-ix="77"><td>017</td><td>Java</td><td>150317T005425Z</td><td><a href="https://codegolf.stackexchange.com/questions/47870/count-the-number-of-ones-in-an-unsigned-16-bit-integer/47872#47872">TheNumbe</a></td></tr>
 <tr d-ix="78"><td>004</td><td>Pyth</td><td>150317T003906Z</td><td><a href="https://codegolf.stackexchange.com/questions/47870/count-the-number-of-ones-in-an-unsigned-16-bit-integer/47871#47871">isaacg</a></td></tr>
 </table>
-<div id="pu0" class="pu"><p><strong>C# 8, 41 bytes</strong></p>
-<p>C# 8.0 add a new override a <code>ToString(&quot;b&quot;)</code> function:</p>
+<div id="pu0" class="pu"><h1>C# 8, 41 bytes</h1>
+<p>C# 8.0 add a new overload to <code>ToString</code> function for convert to binary:</p>
 <pre><code>1337.ToString(&quot;b&quot;).Split('1').Length - 1
 </code></pre>
 <p><a href="https://dotnetfiddle.net/Y2H4eT" rel="nofollow noreferrer">https://dotnetfiddle.net/Y2H4eT</a></p>
