--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20241010T101404Z
+"   /golfscore                                      20241010T131008Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/275970.html">Add an integer to its count of set bits         : 0275970</a>
 <a href="q/275998.html">Output the 97th ASCII character (or a) without u: 0275998</a>
 <a href="q/68866.html">Superstitious hotel elevator                    : 0068866</a>
 <a href="q/47870.html">Count the number of ones in an unsigned 16-bit i: 0047870</a>
@@ -40,7 +41,6 @@
 <a href="q/275939.html">Create 251610 matrices as quickly as possible   : 0275939</a>
 <a href="q/275906.html">Simplified canvas builtin                       : 0275906</a>
 <a href="q/59347.html">Shortest infinite loop producing no output      : 0059347</a>
-<a href="q/275970.html">Shortest realisation of n+C(n)                  : 0275970</a>
 <a href="q/84260.html">Add two numbers                                 : 0084260</a>
 <a href="q/247835.html">Previous Fibonacci number                       : 0247835</a>
 <a href="q/139355.html">Golf a number bigger than TREE(3)               : 0139355</a>
