--- a/q/275970.html
+++ b/q/275970.html
@@ -26,12 +26,39 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>023</td><td>JavaScript ES6</td><td>241008T224008Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/add-an-integer-to-its-count-of-set-bits/275981#275981">Arnauld</a></td></tr>
-<tr d-ix="1"><td>003</td><td>Vyxal</td><td>241008T230652Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/add-an-integer-to-its-count-of-set-bits/275982#275982">emanresu</a></td></tr>
-<tr d-ix="2"><td>028</td><td>Python 3</td><td>241008T204519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/add-an-integer-to-its-count-of-set-bits/275975#275975">jdt</a></td></tr>
-<tr d-ix="3"><td>005</td><td>Uiua</td><td>241008T195211Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/add-an-integer-to-its-count-of-set-bits/275972#275972">nyxbird</a></td></tr>
+<tr d-ix="0"><td>004</td><td>05AB1E</td><td>241010T144549Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/add-an-integer-to-its-count-of-set-bits/276014#276014">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>023</td><td>JavaScript ES6</td><td>241008T224008Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/add-an-integer-to-its-count-of-set-bits/275981#275981">Arnauld</a></td></tr>
+<tr d-ix="2"><td>003</td><td>Vyxal</td><td>241008T230652Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/add-an-integer-to-its-count-of-set-bits/275982#275982">emanresu</a></td></tr>
+<tr d-ix="3"><td>028</td><td>Python 3</td><td>241008T204519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/add-an-integer-to-its-count-of-set-bits/275975#275975">jdt</a></td></tr>
+<tr d-ix="4"><td>005</td><td>Uiua</td><td>241008T195211Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/add-an-integer-to-its-count-of-set-bits/275972#275972">nyxbird</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 23 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 4 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<p>Three different minor alternatives:</p>
+<ul>
+<li><code>bSO+</code> - <a href="https://tio.run/##yy9OTMpM/f8/Kdhf@/9/UwA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfaXL/6Rgf@3/Ov@jDXWMdEx1zHUMjY3NdSwhIBYA" rel="nofollow noreferrer">verify multiple test cases at once</a>;</li>
+<li><code>b1ö+</code> - <a href="https://tio.run/##yy9OTMpM/f8/yfDwNu3//00B" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfaXL/yTDw9u0/@v8jzbUMdIx1THXMTQ2NtexhIBYAA" rel="nofollow noreferrer">verify multiple test cases at once</a>;</li>
+<li><code>bIªO</code> - <a href="https://tio.run/##yy9OTMpM/f8/yfPQKv///00B" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfeX/pMpDq/z/6/yPNtQx0jHVMdcxNDY217GEgFgA" rel="nofollow noreferrer">verify multiple test cases at once</a>.</li>
+</ul>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-none prettyprint-override"><code>b     # Convert the (implicit) input-integer to a binary-string
+ S    # Convert it to a list of bits
+  O   # Sum those bits
+   +  # Add it to the (implicit) input-integer
+      # (after which the result is output implicitly)
+
+b     # Convert the (implicit) input-integer to a binary-string
+ 1ö   # Convert it to base-1, which sums its digits
+   +  # Add it to the (implicit) input-integer
+      # (after which the result is output implicitly)
+
+b     # Convert the (implicit) input-integer to a binary-string
+ Iª   # Convert the binary-string to a list of bits, and append the input-integer
+   O  # Sum this list of bits with appended integer together
+      # (after which the result is output implicitly)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 23 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>f=n=&gt;n&amp;&amp;f(n^(n&amp;=-n))-~n
 </code></pre>
@@ -55,7 +82,7 @@ f(          // otherwise, do a recursive call with:
 - ~n        // add 1 + the value of the extracted bit
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 3 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 3 bytes</h1>
 <pre><code>b∑+
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJi4oiRKyIsIiIsIjUiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -64,13 +91,13 @@ f(          // otherwise, do a recursive call with:
 b   # Of bits
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 28 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 28 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>lambda n:bin(n).count('1')+n
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM/6fZhvzPycxNyklUSHPKikzTyNPUy85vzSvREPdUF1TO@9/QVEmkJOmYaapaf0fAA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 5 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 5 bytes</h1>
 <pre><code>+/+⊸⋯
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_13_0-dev_3__ZiDihpAgKy8r4oq44ouvCuKJoSjiip_in5xmKeKHoTEyOAo=" rel="nofollow noreferrer">Try it!</a></p>
