--- a/q/47870.html
+++ b/q/47870.html
@@ -111,6 +111,19 @@
 <pre><code>1337.ToString(&quot;b&quot;).Split('1').Length - 1
 </code></pre>
 <p><a href="https://dotnetfiddle.net/Y2H4eT" rel="nofollow noreferrer">https://dotnetfiddle.net/Y2H4eT</a></p>
+<p>Thanks so much to @jdt for a best answer in C# 8:</p>
+<pre><code>using System;
+                
+public class Program
+{
+    public static void Main()
+    {
+        int n = 1337;
+        Console.WriteLine(int.PopCount(n));
+    }
+}
+</code></pre>
+<p><a href="https://dotnetfiddle.net/GS8qBO" rel="nofollow noreferrer">https://dotnetfiddle.net/GS8qBO</a></p>
 </div>
 <div id="pu1" class="pu"><h1>8051 opcode, 10 bytes</h1>
 <pre><code>    clr a       ; E4
