--- a/q/275970.html
+++ b/q/275970.html
@@ -37,6 +37,11 @@
 <pre class="lang-none prettyprint-override"><code>lambda n:bin(n).count('1')+n
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM/6fZhvzPycxNyklUSHPKikzTyNPUy85vzSvREPdUF1TO@9/QVEmkJOmYaapaf0fAA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<h1><a href="https://www.python.org/downloads/release/python-3100/" rel="nofollow noreferrer">Python 3.10</a>, 24 bytes</h1>
+
+<pre class="lang-none prettyprint-override"><code>lambda n:n.bit_count()+n
+</code></pre>
+<p>As suggested by @squareroot12621</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 4 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <p>Three different minor alternatives:</p>
