--- a/q/276019.html
+++ b/q/276019.html
@@ -26,16 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>017</td><td>Japt</td><td>241010T190412Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276022#276022">Shaggy</a></td></tr>
-<tr d-ix="1"><td>050</td><td>JavaScript Node.js</td><td>241010T184724Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276021#276021">l4m2</a></td></tr>
+<tr d-ix="0"><td>015</td><td>MATL</td><td>241010T190850Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276023#276023">Luis Men</a></td></tr>
+<tr d-ix="1"><td>016</td><td>Japt x</td><td>241010T190412Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276022#276022">Shaggy</a></td></tr>
+<tr d-ix="2"><td>050</td><td>JavaScript Node.js</td><td>241010T184724Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276021#276021">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 17 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>o&quot;!.:;?ij&quot; Ê+Uè':
+<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 15 bytes</h1>
+<pre><code>0h'ij.;!?::'!=z
 </code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=byIhLjo7P2lqIiDKK1XoJzo&amp;input=IkxvcmVtIGlwc3VtOiBkb2xvciBzaXQgYW1ldD8i" rel="nofollow noreferrer">Try it</a></p>
-<p>Filters the input to the necessary characters, gets the length and adds the count of <code>:</code>s in the input.</p>
+<p><a href="https://tio.run/##y00syfn/3yBDPTNLz1rR3spKXdG26v9/9eCCjMy8CoX8NIWknMTkbIXC0sSikiodhazSlPRUhdxKhbL8ckV1AA" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##Lc27CsJAEIXh3qeYNG4jYh2RFAo2FoI@gGN2kozuZOJe1OTl4xZ2B74Dv2B0823edIYf621RlaUpdtN8uM7mMnTcf0EbuDusn/BK6OO0gkeyLYGM8NZPYRbmpJ4EeAhJSrDq1EPgCCgUq8xnr61HEe5bOKdpchRgCXu1BEd1TX78y3kN5LlGb1mFLGOI3HPkkKVRL@gsdaOlkNzQ6Xd0GCmT@QE" rel="nofollow noreferrer">verify all test cases</a>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 50 bytes</h1>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-x</code></a>, <s>17</s> 16 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>&quot;!.::;?ij&quot;¬£èXi%
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LXg&amp;code=IiEuOjo7P2lqIqyj6FhpJQ&amp;input=IkxvcmVtIGlwc3VtOiBkb2xvciBzaXQgYW1ldD8i" rel="nofollow noreferrer">Try it</a></p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 50 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>x=&gt;[...'ij.;!?::'].flatMap(c=&gt;x.split(c)).length-8
 </code></pre>
