--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20241010T222357Z
+"   /golfscore                                      20241010T231759Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/181128.html">Is it a Cyclops number? Nobody knows!           : 0181128</a>
 <a href="q/145435.html">There are known knowns                          : 0145435</a>
 <a href="q/276019.html">How many dots are there?                        : 0276019</a>
 <a href="q/73128.html">Output the Juggler sequence                     : 0073128</a>
